themes/components/switchlist.less
@switchlist-prefix: ~"@{prefix}switchlist";
.@{switchlist-prefix} {
  display: inline-block;
  >span {
    padding: 8px 15px;
    border-radius: 0;
    color: inherit;
    font-size: @font-size-mini;
    line-height: 1;
    box-sizing: border-box;
    cursor: pointer;
    transition: all @transition-time;
    background-color: #FFF;
    border: @border;
    float: left;
    +span {
      margin-left: -1px;
    }
    position: relative;
    &:hover {
      z-index: 2;
      color: @primary-color;
    }
    &:first-of-type {
      border-radius: @border-radius 0 0 @border-radius;
    }
    &:last-of-type {
      border-radius: 0 @border-radius @border-radius 0;
    }
    &[checked] {
      background-color: @primary-color;
      border-color: darken(@primary-color, 2%);
      color: @white-color;
      z-index: 3;
    }
  }
  &-small>span {
    padding: 5px 8px;
  }
  &[disabled] {
    >span {
      pointer-events: painted;
      cursor: @disabled-cursor;
      border-color: @disabled-border-color;
      color: inherit;
      background-color: @disabled-background-color;
      &[checked] {
        background-color: @disabled-border-color;
      }
    }
  }
}

